--- a/document-rag/.env.example
+++ b/document-rag/.env.example
@@ -1,8 +1,19 @@
+# API Settings
+API_PORT=8000
+API_HOST=0.0.0.0
+FRONTEND_URL=http://localhost:3000
+
 DATABASE_URL=postgresql://postgres:password@localhost:5432/doc_qa_db
 
-# Azure OpenAI Settings
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key
 AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
 AZURE_OPENAI_API_VERSION=2023-05-15
+
 AZURE_OPENAI_DEPLOYMENT_NAME=your-gpt-deployment-name
-AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=your-embedding-deployment-name 
+
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=your-embedding-deployment-name
+
+# Document processing settings
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=200
+VECTOR_DIMENSION=1536
